# spam-detector-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/api/: main.py
src/data/: download_sms.py
src/model/: spam_model.joblib  train.py
test/: .dockerignore  Dockerfile  test_api.py
